<resources>
    <string name="app_name">HealthBuddy</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="unit">Cm</string>
    <string name="femaletext">Female</string>
    <string name="age">Age</string>
    <string name="startingheight">170</string>
    <string name="startingweight">55</string>
    <string name="startingage">22</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
    <string name="let_s_diagnose">Diagnose</string>
    <string name="edoctor">eDoctor</string>
    <string name="profile_name">Profile name:</string>
    <string name="sex">Sex:</string>
    <string name="birth_date">Birth date:</string>
    <string name="yyyy_mm_dd" translatable="false">YYYY-MM-DD</string>
    <string name="add">Add</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="type_your_symptoms">Type Your symptoms…</string>
    <string name="is_first_run">isFirstRun</string>
    <string name="update_string">Update</string>
    <string name="choose_you_profile">Choose you profile</string>
    <string name="reload">reload</string>
    <string name="default_message_delete_me">I feel pain in my knee.</string>
    <string name="app_description">Your disease self diagnosis chat app</string>
    <string name="openChat">open_chat</string>
    <string name="create_new_conversation">Create new conversation</string>
    <string name="history">History</string>
    <string name="error_messsage_response_doctor">Sorry, I was unable to understand your message, could you repeat it?</string>
    <string name="finish">Finish</string>
    <string name="how_can_i_help_you">\nHow can I help you today?</string>
    <string name="hallo_only">Hello \u0020</string>
    <string name="hello_with_exclamation_mark">Hello! \u0020</string>
    <string name="input_can_not_be_empty">Input can not be empty.</string>
    <string name="finish_diagnose_question">I believe I know your diagnose. \nDo you want to finish?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="is_new_user">is_new_user</string>
    <string name="female_sign">F</string>
    <string name="male_sign">M</string>
    <string name="fill_all_inputs">Fill all the inputs</string>
    <string name="permission_denied">Permission denied</string>
    <string name="user_settings">user_settings</string>
    <string name="user_id">user_id</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="most_likely_condition">Your condition is most likely:</string>
    <string name="export_to_pdf">EXPORT TO PDF</string>
    <string name="name">Name: \u0020</string>
    <string name="probability">Probability: \u0020</string>
    <string name="exported_to_pdf_file">Exported to PDF file</string>
    <string name="user">User: \u0020</string>
    <string name="doctor">e-Doctor: \u0020</string>
    <string name="doctor_your_diagnosis">Doctor: Your diagnosis: \u0020</string>
    <string name="diagnose_with_white_space">Diagnose: </string>
    <string name="symptoms">Symptoms: \u0020</string>
    <string name="present">Present: \u0020</string>
    <string name="absent">Absent: \u0020</string>
    <string name="unknown">Unknown: \u0020</string>
    <string name="notification_title">Is everything alright?</string>
    <string name="notification_message">You didn\'t diagnose lately</string>
    <string name="conversation">Conversation:</string>
    <string name="warning_title">Be aware</string>
    <string name="warning_message">The application can not replace a real doctor appointment</string>
    <string name="warning_button">Confirm</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Medicine Reminder</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="medicine_name">Medicine name</string>
    <string name="dosage_summary">Dosage</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="string_time">Time</string>
    <string name="medicine_name_hint">Medicine name</string>
    <string name="string_from">From</string>
    <string name="string_schedule">Schedule</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="once_a_day">Once a day</string>
    <string name="twice_a_day">Twice a day</string>
    <string name="thrice_a_day">Thrice a day</string>
    <string name="_4_times_a_day">4 times a day</string>
    <string name="_5_times_per_day">5 times per day</string>
    <string name="number_of_total_doses">Number of total doses</string>
    <string name="sample_date">Thu, September 13 2018</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="time_to_take">Time to take&#160;</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="take">Take</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="both">Both</string>
    <string name="alert_type">Alert type</string>
    <string name="How_to_make_first_aid_kit"><b>How do I make a first aid kit?\n\n</b>
        A well-stocked first aid kit is a must-have for treating minor injuries at home and on the go.\n
        You can buy a first aid kit or put one together on your own. Keep your supplies in a sturdy,
        clear plastic box so you can see what’s inside.\n\n
    </string>
    <string name="What_should_be_in_my_first_aid_kit"><b>What should be in my first aid kit?\n\n</b>
        1.	Adhesive tape\n
        2.	Alcohol wipes\n
        3.	Allergy medicine\n
        4.	Aloe vera gel\n
        5.	Antibiotic ointment\n
        6.	Bandages in different sizes\n
        7.	Calamine lotion\n
        8.	Cold packs\n
        9.	Elastic bandages\n
        10.	Gauze rolls and pads\n
        11.	Hand sanitizer (for your travel first aid kit)\n
        12.	Hydrocortisone cream\n
        13.	Latex-free gloves\n
        14.	Pain relievers like acetaminophen and ibuprofen\n
        15.	Saline wound wash\n
        16.	Scissors and tweezers\n
    </string>
    <string name="Cuts_and_Scrapes"><b>How do I treat a minor cut or scrape?\n\n</b>
        Follow these steps to keep cuts clean and prevent infections and scars : \n
        1.	Wash your hands. First, wash up with soap and water so you don’t get bacteria into the cut and cause an infection. If you’re on the go, use hand sanitizer.\n
        2.	Stop the bleeding. Put pressure on the cut with a gauze pad or clean cloth. Keep the pressure on for a few minutes.\n
        3.	Clean the wound. Once you’ve stopped the bleeding, rinse the cut under cool running water or use a saline wound wash.\nClean the area around the wound with soap and a wet washcloth. Don’t get soap in the cut, because it can irritate the skin.\And don’t use hydrogen peroxide or iodine, which could irritate the cut.\n
        4.	Remove any dirt or debris. Use a pair of tweezers cleaned with alcohol to gently pick out any dirt, gravel, glass, or other material in the cut.\n\n
        <b>When do you need to call your doctor?\n\n</b>
        Check with your doctor or go to the emergency room if : \n\n
        5.	The cut is deep, long, or the edges are jagged. You may need stitchesand a tetanus shot.\n
        6.	The cut or scrape is from a dirty or rusty object. You may need a tetanus shot.\n
        7.	The injury is from an animal or human bite.\n
        8.	You can’t stop the bleeding with direct pressure.\n
        9.	You can’t get dirt out of the wound.\n
        10.	The cut is on your face or near a joint, like on your fingers.\n
        11.	The skin around the cut gets red and swollen or develops red streaks.\n
        12.	Pus drains from the cut.\n
        13.	You have a fever of more than 100.4 F (in either an adult or child).\n
    </string>
    <string name="Nosebleeds"><b>How do I treat a nosebleed?\n\n</b>
        Nosebleeds usually look a lot worse than they are. Most of the time you can stop the flow with a few simple steps:\n
        1.	Lean the head slightly forward, so blood doesn’t run down the throat.\n
        2.	With a tissue or washcloth, gently press the nostrils together to stop the bleeding.\n
        3.	Hold the nose for at least 5 minutes. Then check to see if the bleeding has stopped. If it hasn’t stopped, gently squeeze for another 10 minutes.\n
    </string>
    <string name="Splinters"><b>How do I remove a splinter?\n\n</b>
        Splinters are more of an annoyance than real health problem, but if you’ve got one stuck in a finger or toe, you’ll want to get it out. How you remove a splinter depends on how deep it is.\n
        If the splinter is sticking out of the skin:\n
        1.	Wash the skin around the splinter with soap and water.\n
        2.	Clean a pair of tweezers with a cotton swab dipped in alcohol.\n
        3.	Grab the end of the splinter with the tweezers.\n
        4.	Pull it out at the same angle as the splinter went in.\n
        5.	Clean the skin again with soap and water.\n
        If the splinter is under the skin:v
        6.	Wash the skin around the splinter with soap and water.\n
        7.	Clean a needle and tweezers with alcohol.\n
        8.	Gently scrape away the skin above the splinter with the needle until you can see the top of the splinter.\n
        9.	Grab the end of the splinter with the tweezers and pull it out at the same angle it went in.\n
        10.	Clean the skin again with soap and water.\n
    </string>
    <string name="Animal_Bites_and_Insect_Stings"><b>How do I treat animal bites and scratches?\n\n</b>
        Sometimes a seemingly friendly dog or cat can bite or scratch. If you or your child gets a bite, follow these steps to treat the wound:\n
        •	Hold a towel or gauze to the area to stop the bleeding.\n
        •	Clean the wound with soap and water.\n
        •	Cover it with a clean bandage or gauze pad.\n\n
        <b>When should I see a doctor for an animal bite?\n\n</b>
        For any animal bite, you may need an antibiotic to prevent infection. So it’s always a good idea to call your doctor, especially if you have medical conditions that weaken your immune system. Also, you should call your doctor or head to the emergency room if:\n
        •	The bite was caused by an animal you don’t know, or by any wild animal like a raccoon, skunk, or bat. You may need a tetanus or rabies vaccine.\n
        •	The bite is large, or it doesn’t stop bleeding after you’ve held pressure on it for 15 minutes. It may need to be closed with stitches.\n
        •	You think the bite may have damaged a bone, tendons, or nerves, because you can’t bend or straighten the body part or you’ve lost feeling in it.\n
        •	The wound is red, swollen, or oozing fluid.\n
    </string>
</resources>