<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fg_add_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".AddProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--<ImageButton
                android:id="@+id/beforeAddUserImage"
                android:layout_width="158dp"
                android:layout_height="167dp"
                android:background="@drawable/add_user_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/addUserImage"
                android:layout_width="158dp"
                android:layout_height="167dp"
                android:background="@drawable/add_user_black"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addUserImage">

            <LinearLayout
                android:id="@+id/profile_name_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/profile_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/profile_name"
                    android:textColor="@color/titleColor"
                    android:textSize="15sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backArrow" />

                <EditText
                    android:id="@+id/edit_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    tools:layout_editor_absoluteX="38dp"
                    tools:layout_editor_absoluteY="347dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/sex_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/firstChatMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5sp"
                    android:text="@string/sex"
                    android:textColor="@color/titleColor"
                    android:textSize="15sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backArrow" />

                <ImageButton
                    android:id="@+id/female"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/female" />

                <ImageButton
                    android:id="@+id/male"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/male" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/birth_date_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/birth_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/birth_date"
                    android:textColor="@color/titleColor"
                    android:textSize="15sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backArrow" />

                <Button
                    android:id="@+id/dateEditTextFragmentAddProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/backgroundColor"
                    android:focusable="true"
                    android:text="@string/yyyy_mm_dd"
                    android:textColor="@color/titleColor" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/fgAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/add"
            android:textColor="@color/titleColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </LinearLayout>

</RelativeLayout>